[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/settings_background.png" type="Texture" id=1]
[ext_resource path="res://menu/CustomButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/Settings.gd" type="Script" id=3]
[ext_resource path="res://items/coin.wav" type="AudioStream" id=4]

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
layer = 111
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/Rows"]
margin_right = 472.0
margin_bottom = 8.0
size_flags_vertical = 2
text = "SETTINGS"
align = 1

[node name="Music" parent="Background/Rows" instance=ExtResource( 2 )]
margin_left = 196.0
margin_top = 98.0
margin_right = 276.0
margin_bottom = 122.0
size_flags_horizontal = 4
toggle_mode = true
pressed = true

[node name="Label" parent="Background/Rows/Music" index="0"]
text = "Music: on"

[node name="Sfx" parent="Background/Rows" instance=ExtResource( 2 )]
margin_left = 196.0
margin_top = 126.0
margin_right = 276.0
margin_bottom = 150.0
size_flags_horizontal = 4
toggle_mode = true
pressed = true

[node name="Label" parent="Background/Rows/Sfx" index="0"]
text = "Soundfx: on"

[node name="Back" parent="Background/Rows" instance=ExtResource( 2 )]
margin_left = 196.0
margin_top = 224.0
margin_right = 276.0
margin_bottom = 248.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Label" parent="Background/Rows/Back" index="0"]
text = "Back"

[node name="TestSound" type="AudioStreamPlayer" parent="Background/Rows"]
stream = ExtResource( 4 )
bus = "sfx"
[connection signal="pressed" from="Background/Rows/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Background/Rows/Sfx" to="." method="_on_Sfx_pressed"]
[connection signal="pressed" from="Background/Rows/Back" to="." method="_on_Back_pressed"]

[editable path="Background/Rows/Music"]

[editable path="Background/Rows/Sfx"]

[editable path="Background/Rows/Back"]
